transcribe/api/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-api
  namespace: aiplayground
spec:
  selector:
    app: rag-api
  ports:
    - name: http
      port: 8101
      targetPort: http
  type: LoadBalancer
