transcribe/api/k8s/base/apigateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: aiplayground-gw
  namespace: aiplayground
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 8101
      allowedRoutes:
        namespaces:
          from: Same
